Fix margins on mobile

--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -109,6 +109,10 @@
     & > * {
       display: block;
       flex: 1;
+
+      &:last-child {
+        margin-left: 16px;
+      }
     }
   }
 }
